--- a/GestureGis2/TrainingDock.xaml
+++ b/GestureGis2/TrainingDock.xaml
@@ -1,14 +1,13 @@
-﻿<UserControl x:Class="GestureGis2.Dockpane1View"
+﻿<UserControl x:Class="GestureGis2.TrainingDockView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"    
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"   
              xmlns:ui="clr-namespace:GestureGis2"
              xmlns:extensions="clr-namespace:ArcGIS.Desktop.Extensions;assembly=ArcGIS.Desktop.Extensions"
-             xmlns:controls="clr-namespace:ArcGIS.Desktop.Framework.Controls;assembly=ArcGIS.Desktop.Framework"                       
              mc:Ignorable="d" 
-             d:DesignHeight="226.087"
-             d:DataContext="{Binding Path=ui.Dockpane1ViewModel}" Width="326.087">
+             d:DesignHeight="300" d:DesignWidth="300"
+             d:DataContext="{Binding Path=ui.TrainingDockViewModel}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -22,8 +21,7 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <DockPanel Grid.Row="0" LastChildFill="true" KeyboardNavigation.TabNavigation="Local" Height="30" HorizontalAlignment="Right" Width="326">
-
+        <DockPanel Grid.Row="0" LastChildFill="true" KeyboardNavigation.TabNavigation="Local" Height="30">
             <TextBlock Grid.Column="1" Text="{Binding Heading}" Style="{DynamicResource Esri_TextBlockDockPaneHeader}">
                 <TextBlock.ToolTip>
                     <WrapPanel Orientation="Vertical" MaxWidth="300">
@@ -33,13 +31,12 @@
       </TextBlock>
         </DockPanel>
         <Border BorderBrush="Black" ClipToBounds="true" BorderThickness="1" HorizontalAlignment="Left" Height="215" Margin="0,0,0,0" Grid.Row="1" VerticalAlignment="Top" Width="141">
-            <Canvas  Height="213"  Width="139" Name="sketchPad"  MouseDown="sketchPad_MouseDown" MouseMove="sketchPad_MouseMove" >
+            <Canvas HorizontalAlignment="Left" Height="213" VerticalAlignment="Top" Width="139" Name="trainPad" MouseDown="trainPad_MouseDown" MouseMove="trainPad_MouseMove" >
                 <Canvas.Background>
                     <SolidColorBrush Color="White" Opacity="0"/>
                 </Canvas.Background>
             </Canvas>
         </Border>
-
-        <Button Click="Button_Click" Content="Submit" HorizontalAlignment="Left" Height="43" Margin="99,265,0,-112" Grid.Row="1" VerticalAlignment="Top" Width="84"/>
+        <Button Content="Submit" Click="Button_Click" HorizontalAlignment="Left" Margin="106,248,0,0" Grid.Row="1" VerticalAlignment="Top" Width="75" Height="22"/>
     </Grid>
 </UserControl>
